# project-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
code/: pyproject.toml
docs/assignments/: main.tex  references.bib
